nyt-clone/src/App.css
/* ... */
/* Stili per il nav*/
.nav {
  display: flex;
  justify-content: center;
  gap: 1em;
  margin-bottom: 2em;
}


/* Stili per il logo in StyledComponents */

/* Responsive */

@media (max-width: 1024px) {
  header {
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto auto;
    grid-template-areas:
      "hamburger logo login"
      "menu menu menu";
  }

  .hamburger-menu {
    display: block;
    grid-area: hamburger;
    cursor: pointer;
    padding: 1rem;
  }

  /* Menu inizialmente nascosto */
  .menu {
    flex-direction: column;
    position: fixed;
    top: 100%;  /* Posiziona il menu direttamente sotto l'header */
    left: 0;
    width: 100%;
    background: rgba(0, 0, 0, 0.9);
    color: white;
    z-index: 1000;
    justify-content: center;
    padding-top: 1rem;
    visibility: hidden;
    opacity: 0;
    pointer-events: none; 
    transition: transform 0.3s ease-in-out, visibility 0.3s ease;
    transform: translateY(-10%); 
  }

  .menu.active {
    display: flex; 
    position: sticky;
    opacity: 1;
    visibility: visible;
    pointer-events: auto; 
    transform: translateY(0);
  }

  .menu ul {
    flex-direction: column;
    align-items: center;
    gap: 1.5rem;
  }

  .menu li a {
    color: white;
    font-size: 1.5rem;
  }

  .menu li a:hover {
    text-decoration: underline;
  }

  /* Nascondi la barra di ricerca su mobile */
  .search-wrapper {
    display: none;
  }
}


  
@media (max-width: 550px) {
  header {
    grid-template-columns: 1fr 2fr 1fr;
    padding: 0.5rem;
  }

  .menu li a {
    font-size: 1.2rem; /* Riduce la dimensione del testo */
  }

  .menu ul {
    gap: 1rem; /* Riduce lo spazio tra gli elementi */
  }

  .hamburger-menu {
    padding: 0.5rem;
  }

  .search-icon, .login svg {
    width: 24px; /* Riduce le icone */
    height: 24px;
  }
}


/* login/logout Popup */
/* Popup Overlay (Sfondo trasparente) */
.popup-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

/* Popup (finestra modale) */
.login-popup {
  background-color: #fff;
  padding: 30px;
  width: 90%;
  max-height: 80%;
  overflow-y: auto; /* Aggiungi uno scroll se il contenuto è troppo lungo */
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  display: grid;
  grid-template-rows: auto auto 1fr auto;
  position: relative;
  gap: 20px;
}

/* Chiusura con X Nera */
.close-popup {
  position: absolute;
  top: 10px;
  right: 10px;
  background: none;
  border: none;
  font-size: 28px;
  color: black;
  cursor: pointer;
  transition: color 0.3s;
}

/* Contenuto del popup */
.popup-content {
  display: grid;
  gap: 15px;
}

.popup-content h2, h3 {
  color: black; /* Colore personalizzato per il testo h3 (puoi cambiarlo a tuo piacere) */
  font-size: 24px;
  margin-bottom: 15px;
  text-align: flex-left; /* Centra il titolo */
}

.popup-content input,
.popup-content button {
  padding: 10px;
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 5px;
}

.popup-content input {
  width: 100%;
}

/* Chiusura del popup */
.popup-content button {
  background-color: #007bff;
  color: #fff;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.popup-content button:hover {
  background-color: #0056b3;
}

.popup-content button.close {
  background-color: #f44336;
  color: white;
  width: 100%;
  padding: 12px;
}

.popup-content button.close:hover {
  background-color: #d32f2f;
}


/* Regole generali */

h2 {
  text-align: center;
  margin-bottom: 30px; /* Spazio tra il titolo e la lista */
}

.news-layout {
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: 3fr 0.5fr 1fr; /* Top Stories (3/4) | Contenuti Correlati (1/4) */
  grid-template-areas:
    "top-stories . related-content"
    "top-stories . .";
  margin: 0 auto; /* Centra il layout */
  padding: 2rem; /* Aggiunge spazio intorno al layout */
}

@media (max-width: 1024px) {
  .news-layout {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    margin-top: 20px;
    padding: 0rem;
  }

  .article-list {
    width: 85%; /* Occupa quasi tutta la larghezza dello schermo */
    max-width: 100vhvh; /* Limita la larghezza massima */
    text-align: center;
    margin-top: 1rem; /* Distanza dall'header */
  }
}

/* Stile per gli articoli principali */
/* Stile per la lista degli articoli */
.article-list {
  grid-area: top-stories; /* Assegna l'area della griglia */
  display: grid;  /* Utilizza un layout flessibile */
  list-style: none;  /* Rimuove i punti dalla lista */
  padding: 0;  /* Rimuove il padding predefinito */
  margin: 0;  /* Rimuove il margine predefinito */
  justify-content: center; /* Centra gli articoli */
  align-items: center;  /* Allinea gli articoli al centro */
}

ul {
  padding: 0;
  list-style: none;
  padding-left: 0; 
  margin-block-start: 0;
  width: 100%;
}

/* Stile per ogni articolo */
.article-item {
  display: inline-grid;
  background-color: #f9f9f9;
  border-radius: 8px;
  overflow: hidden;
  width: 100%; 
  max-width: -webkit-fill-available; 
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
  padding: 2.5rem;
  transition: transform 0.3s ease;  
  margin-bottom: 2rem;  
}

@media (max-width: 1024px) {
  .article-item {
    padding: 0rem;
  }
}

/* Hover sugli articoli */
.article-item:hover {
  transform: translateY(-5px);  /* Sposta l'articolo verso l'alto al passaggio del mouse */
}

/* Link agli articoli */
.article-link {
  text-decoration: none;
  color: inherit;  /* Mantiene il colore ereditato dal testo */
  display: block;  /* Rende l'intero articolo cliccabile */
  text-align: center;  /* Allinea il testo al centro */
}
/* ... */

